# geoix

./: CMakeLists.txt  Doxyfile  LICENSE  Makefile  abstract_mapper.cpp  abstract_mapper.h  bspline.cpp  bspline.h  color_palette.cpp  color_palette.h  color_slider.h  constants.h  contour.h  contourer_fast.cpp  contourer_fast.h  coord_system_2d.cpp  coord_system_2d.h  coord_system_3d.cpp  coord_system_3d.h  cube.cpp  cube.h  cubedialog.cpp  cubedialog.h  cubedialog.ui  cumulative_distribution.h  curve.cpp  curve.h  curve_load_table_delegate.cpp  curve_load_table_delegate.h  curve_load_table_model.cpp  curve_load_table_model.h  curveloaddialog.cpp  curveloaddialog.h  curveloader.ui  custom_tree_model.cpp  custom_tree_model.h  data_exporter.cpp  data_exporter.h  data_loader.cpp  data_loader.h  (+104 more)
cg/: cg.cpp  cg.h  tnt_array1d_utils.h
data/: Points  Points3  points2
data/curves/: 1  10  2  3  4  5  6  7  8  9  curve_generator.py
data/points/: point_generator.py  point_generator2.py  point_generator3.py  points  points.py  points_1024  points_128  points_16384  points_2048  points_256  points_32  points_32768  points_4096  points_512  points_64  points_65536  points_8192  points_bottom  points_kriging  points_up
data/results/: sgs_surface  smooth_surface
data/simple/: 53t3y34y  Point
data/simple/.svn/: entries
data/simple/.svn/text-base/: Lines.dat.svn-base  s1.svn-base  s2.svn-base
data/surfaces/: s_bottom  s_up
data/wells/: 1  10  2  3  4  5  6  7  8  9  well_generator.py  well_generator2.py
datamanager/: datamanager.cpp  datamanager.h  datamanager.pro  datamanager_global.h
debug/: moc_abstract_mapper.cpp  moc_color_palette.cpp  moc_color_slider.cpp  moc_contour.cpp  moc_coord_system_2d.cpp  moc_coord_system_3d.cpp  moc_cube.cpp  moc_cubedialog.cpp  moc_custom_tree_model.cpp  moc_data_loader.cpp  moc_drop_widget.cpp  moc_gl_panel_2d.cpp  moc_gl_panel_3d.cpp  moc_kriging_mapper.cpp  moc_lines.cpp  moc_local_b_spline_mapper.cpp  moc_logger.cpp  moc_mainwindow.cpp  moc_points.cpp  moc_project.cpp  moc_project_tree_model.cpp  moc_rbf_mapper.cpp  moc_render_panel.cpp  moc_render_panel_2D.cpp  moc_render_panel_3D.cpp  moc_scene_2d.cpp  moc_scene_3d.cpp  moc_spliner_dialog.cpp  moc_subtree_model.cpp  moc_surf_prop_dialog.cpp  moc_surface.cpp  moc_surface_data_iterator.cpp  moc_tree_abstract_object.cpp  moc_tree_folder_object.cpp  moc_tree_menu_fabric.cpp  moc_tree_object.cpp  moc_visual_object.cpp  moc_well.cpp  qrc_images.cpp
fourier/: Makefile  Makefile.Debug  Makefile.Release  _kiss_fft_guts.h  fourier.pro  fourier3d.pro  fourier_global.h  fourierinterpolator.cpp  fourierinterpolator.h  kiss_fft.cpp  kiss_fft.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  welldata.cpp  welldata.h
